--- a/locv_account_advance_payment/view/account_advance_payment.xml
+++ b/locv_account_advance_payment/view/account_advance_payment.xml
@@ -218,7 +218,7 @@
                                     <field name="apply_journal_id" string="Diario de Aplicación" attrs="{'invisible': [('state', '=', 'available')]}"/>
                                 </group>
                                 <group>
-                                    <field name="invoice_id" string="Factura" required="1" domain="[('partner_id', '=', partner_id),('type', '=', 'in_invoice'),('state','=','posted')]" options="{'no_create': True}" attrs="{'readonly': [('state', '!=','available')]}"/>
+                                    <field name="invoice_id" string="Factura" required="1" domain="[('partner_id', '=', partner_id),('move_type', '=', 'in_invoice'),('state','=','posted')]" options="{'no_create': True}" attrs="{'readonly': [('state', '!=','available')]}"/>
                                     <field name="amount_invoice" string="Monto de Factura" readonly="1" force_save="1"/>
                                     <field name="invoice_currency" invisible="True"/>
                                     <field name="amount_available" string="Monto Disponible" readonly="1" force_save="1"/>
@@ -280,7 +280,7 @@
                                     <field name="apply_journal_id" string="Diario de Aplicación" attrs="{'invisible': [('state', '!=', 'available')]}"/>
                                 </group>
                                 <group>
-                                    <field name="invoice_id" string="Factura" required="1" domain="[('partner_id', '=', partner_id),('type', '=', 'out_invoice'),('state','=','posted')]" attrs="{'readonly': [('state', '!=','available')]}" options="{'no_create': True}"/>
+                                    <field name="invoice_id" string="Factura" required="1" domain="[('partner_id', '=', partner_id),('move_type', '=', 'out_invoice'),('state','=','posted')]" attrs="{'readonly': [('state', '!=','available')]}" options="{'no_create': True}"/>
                                     <field name="amount_invoice" string="Monto de Factura" readonly="1" force_save="1"/>
                                     <field name="invoice_currency" invisible="True"/>
                                     <field name="amount_available" string="Monto Disponible" readonly="1" force_save="1"/>
