[FIX] Corregida ruta Xpath.

--- a/locv_account_advance_payment/view/invoice_view.xml
+++ b/locv_account_advance_payment/view/invoice_view.xml
@@ -41,7 +41,7 @@
                     </page>
                 </xpath>
 
-                <xpath expr="//field[@name='company_id']" position="after">
+                <xpath expr="//field[@name='currency_id']" position="after">
                     <field name="sum_amount_available" readonly="1" force_save="1" attrs="{'invisible': [('move_type', 'not in', ('out_invoice', 'out_refund', 'out_receipt'))]}" widget='monetary' options="{'currency_field': 'currency_company'}"/>
                     <field name="currency_company" invisible="True"/>
                     <field name="sum_amount_available_dolares" readonly="1" force_save="1" attrs="{'invisible': [('move_type', 'not in', ('out_invoice', 'out_refund', 'out_receipt'))]}"/>
