[FIX] Se corrigio vista de account.move en modulo locv_account_fiscal_requirements.
      Se actualizo domain corrigiendo el nombre del campo 'type' a 'move_type'
      en los archivos account_invoice_view.xml y nro_ctrl_secuencial_customer.xml

--- a/locv_account_fiscal_requirements/view/nro_ctrl_secuencial_customer.xml
+++ b/locv_account_fiscal_requirements/view/nro_ctrl_secuencial_customer.xml
@@ -9,9 +9,9 @@
                     <xpath expr="//field[@name='ref']" position="before">
 
                             <label for="nro_ctrl" string="Número de Control" style="font-weight:bold;"
-                                   attrs="{'invisible':['|', ('type', 'not in', ('out_invoice', 'out_refund', 'out_receipt')), ('type', '=', 'entry')], 'readonly': [('state', 'in', ('draft', 'posted','cancel'))]}"/>
+                                   attrs="{'invisible':['|', ('move_type', 'not in', ('out_invoice', 'out_refund', 'out_receipt')), ('move_type', '=', 'entry')], 'readonly': [('state', 'in', ('draft', 'posted','cancel'))]}"/>
                             <field name="nro_ctrl" string="Número de Control222" required="0" nolabel="1" force_save="1"
-                                       attrs="{'invisible':['|', ('type', 'not in', ('out_invoice', 'out_refund', 'out_receipt')), ('type', '=', 'entry')], 'readonly': [('state', 'in', ('draft', 'posted','cancel'))]}"/>
+                                       attrs="{'invisible':['|', ('move_type', 'not in', ('out_invoice', 'out_refund', 'out_receipt')), ('move_type', '=', 'entry')], 'readonly': [('state', 'in', ('draft', 'posted','cancel'))]}"/>
 
                     </xpath>
                 </field>
