--- a/locv_account_fiscal_requirements/view/account_invoice_view.xml
+++ b/locv_account_fiscal_requirements/view/account_invoice_view.xml
@@ -22,9 +22,9 @@
                 </xpath>
 
                 <xpath expr="//field[@name='ref']" position="before">
-                    <field name="marck_paper" string="Papel para anular" required="0" attrs="{'invisible': [ '|', ('state','!=','posted'),('type', 'not in',  ('out_invoice', 'out_refund', 'out_receipt','in_invoice', 'in_refund', 'in_receipt'))]}"/>
-                    <field name="nro_ctrl" string="Número de Control" force_save="1" attrs="{'required': [('type', '!=', 'entry'), ('type', 'not in',  ('out_invoice', 'out_refund', 'out_receipt'))], 'readonly':[('state','not in','draft')], 'invisible': [('type', 'not in',  ('in_invoice', 'in_refund', 'in_receipt'))]}" context ="{'res_partner_search_mode': 'supplier'}"/>
-                    <field name="supplier_invoice_number" force_save="1" string="Número de Factura de Proveedor" attrs="{'required': [ ('type', '!=', 'entry'), ('type', 'not in',  ('out_invoice', 'out_refund', 'out_receipt'))], 'readonly':[('state','not in','draft')], 'invisible': [('type', 'not in',  ('in_invoice', 'in_refund', 'in_receipt'))]}" context ="{'res_partner_search_mode': 'supplier'}"/>
+                    <field name="marck_paper" string="Papel para anular" required="0" attrs="{'invisible': [ '|', ('state','!=','posted'),('move_type', 'not in',  ('out_invoice', 'out_refund', 'out_receipt','in_invoice', 'in_refund', 'in_receipt'))]}"/>
+                    <field name="nro_ctrl" string="Número de Control" force_save="1" attrs="{'required': [('move_type', '!=', 'entry'), ('move_type', 'not in',  ('out_invoice', 'out_refund', 'out_receipt'))], 'readonly':[('state','not in','draft')], 'invisible': [('move_type', 'not in',  ('in_invoice', 'in_refund', 'in_receipt'))]}" context ="{'res_partner_search_mode': 'supplier'}"/>
+                    <field name="supplier_invoice_number" force_save="1" string="Número de Factura de Proveedor" attrs="{'required': [ ('move_type', '!=', 'entry'), ('move_type', 'not in',  ('out_invoice', 'out_refund', 'out_receipt'))], 'readonly':[('state','not in','draft')], 'invisible': [('move_type', 'not in',  ('in_invoice', 'in_refund', 'in_receipt'))]}" context ="{'res_partner_search_mode': 'supplier'}"/>
                 </xpath>
 
 
