--- a/locv_withholding_islr/view/invoice_view.xml
+++ b/locv_withholding_islr/view/invoice_view.xml
@@ -13,7 +13,7 @@
             <field name="arch" type="xml">
                 <!--xpath expr="//separator[@name='isep']" position="before"-->
                 <xpath expr="//page[@name='other_info']" position="before">
-                    <page string="Retención de ISLR" attrs="{'invisible':[('type', '=', 'entry')]}">
+                    <page string="Retención de ISLR" attrs="{'invisible':[('move_type', '=', 'entry')]}">
                     <group col="6" colspan="4" >
                         <field name="status"  colspan="2"/>
                         <field name="islr_wh_doc_id" readonly="1"/>
