--- a/locv_withholding_iva/view/wh_iva_view.xml
+++ b/locv_withholding_iva/view/wh_iva_view.xml
@@ -17,7 +17,7 @@
                     <field name="name"/>
                     <field
                         name="invoice_id"
-                        context="{'type':'in_invoice' or 'out_invoice'}"  options="{'no_quick_create': True, 'no_create_edit' : True}"
+                        context="{'move_type':'in_invoice' or 'out_invoice'}"  options="{'no_quick_create': True, 'no_create_edit' : True}"
                         />
                     <field name="type" invisible="1"/>
                     <field name="supplier_invoice_number" attrs="{'invisible': ['|',('supplier_invoice_number', '=', ' '),('type','!=', 'in_invoice'),]}"/>
@@ -41,7 +41,7 @@
                         <page string="Factura retenida">
                             <group colspan="4">
                             <field
-                                name="invoice_id" context="{'type':'in_invoice' or 'out_invoice'}"  options="{'no_quick_create': True, 'no_create_edit' : True}"
+                                name="invoice_id" context="{'move_type':'in_invoice' or 'out_invoice'}"  options="{'no_quick_create': True, 'no_create_edit' : True}"
                                  />
                                 <!-- domain="[('state', '=', 'open'), ('wh_iva', '=', False), ('type', '=', parent.type), '|', ('partner_id','=',parent.partner_id), ('partner_id','child_of',parent.partner_id)]"
                                 on_change="invoice_id_change(invoice_id)"-->
