[UPD] Se elimino required de modelo de account.tax y se agrego a su vista.

--- a/locv_withholding_iva/view/account_view.xml
+++ b/locv_withholding_iva/view/account_view.xml
@@ -8,7 +8,7 @@
             <field name="inherit_id" ref="account.view_tax_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='name']" position="after">
-                    <field name="type_tax" widget = "selection" string="Tipo de Impuesto"/>
+                    <field name="type_tax" widget = "selection" string="Tipo de Impuesto" required="1"/>
                 </xpath>
                  <xpath expr="//field[@name='analytic']" position="before">
                      <field name="wh_vat_collected_account_id"/>
